* fixed file browser scroll height issue * fixed too much padding to body on login page * incremented version number

--- a/bookface_auto.css
+++ b/bookface_auto.css
@@ -1,8 +1,8 @@
 /*
 	Name	   : Bookface Auto Color Mode
-	Version    : 1.3
+	Version    : 1.4
     Licence    : AGPL
-    Created on : 11 Feb 2025
+    Created on : 12 Feb 2025
     Author     : Pygoscelis Papua @randompenguin@friendica.world feb @feb@loma.ml Phil @phil@loma.ml
 */
 
@@ -113,11 +113,12 @@
 			margin-top: 8px;
 			color: var(--link-color);
 		}
-		ul.tabs li:hover:not(.active) {
+		ul.tabs li:not(.active):hover {
 			border-bottom-width: 0px !important;
 		}
 			ul.tabs li:hover:not(.active) > a {
 				background-color: rgba(128,128,128,.1) !important;
+				background-image: none !important;
 				border-radius: 8px !important;
 				color: var(--font-color);
 			}
@@ -891,7 +892,9 @@
 		   border-color: transparent !important;
 		   background-color: transparent !important;
 	}
-		   
+	.fbrowser-content-container.justified-gallery {
+    	max-height: 100% !important;
+	}			   
 	#jot-title,
 	#jot-category {
 		   background-color: #fff !important;
@@ -2555,6 +2558,7 @@ header #banner {
 	#photo-edit-end {
 		clear: both;
 	}
+	/* make textareas resize in the correct direction */
 	body.mod-settings textarea {
 		resize: vertical !important;
 	}
@@ -2980,11 +2984,14 @@ p.wall-item-announce,
 	.fbrowser .folders button:focus {
 		background-color: rgba(255,255,255,.75) !important;
 	}
-		.fbrowser .folders li:hover,
-		.fbrowser .folders li:focus {
+	.fbrowser .folders li:hover,
+	.fbrowser .folders li:focus {
        border-color: transparent !important;
        background-color: transparent !important;
-}
+	}
+	.fbrowser-content-container.justified-gallery {
+    	max-height: 100% !important;
+	}	
 #jot-modal .modal-header a, 
 #jot-modal .modal-header .btn-link, 
 #profile-jot-submit-wrapper a, 
@@ -4155,6 +4162,9 @@ a.tag.label,
 }
 }	
 /* LOGIN AND INFO SCREENS */
+body.mod-home {
+	padding-top: 10px !important;
+}
 .mod-home .navbar,
 .mod-home #topbar-second{
 	background-color: transparent !important;
